--- a/src/manifest.json
+++ b/src/manifest.json
@@ -3,11 +3,15 @@
     "version": "1.0",
     "options_page": "options.html",
     "description": "Build an Extension!",
-    "permissions": ["storage", "declarativeContent"],/*
+    "permissions": ["storage", "declarativeContent"],
     "background": {
       "scripts": ["background.js"],
       "persistent": false
-    },*/
+    },
+     "background": {
+    "scripts": ["background.js"],
+    "persistent": false
+    },
     "browser_action": {
       "default_popup": "popup.html",
       "default_icon": {
