--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "Getting Started Example",
+    "name": "GitHub Notifications Bot",
     "version": "1.0",
     "options_page": "options.html",
     "description": "Build an Extension!",
