updating screencast - milestone 3

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -2,7 +2,7 @@
     "name": "GitHub Notifications Bot",
     "version": "1.0",
     "options_page": "options.html",
-    "description": "Build an Extension!",
+    "description": "Track your github notifications using this bot",
     "permissions": ["storage", "declarativeContent"],
     "background": {
       "scripts": ["background.js"],
